--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,4 +1,4 @@
-.search_filter {
+.filters {
     background-color: white;
     height: 70px;
     width: 100%;
@@ -6,7 +6,7 @@
     border-radius: 4px;
     position: relative;
 }
-.search_filter button {
+.filters button {
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
@@ -19,6 +19,6 @@
     top: 15%;
     position: absolute;
 }
-.search_filter button:hover {
+.filters button:hover {
     opacity: 90%;
 }
